--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,22 +1,44 @@
 nav {
-    display: inline-flex;
-    width: 100%;
-    background-color: rgb(var(--nhl_stenden_corp_blue));
-    justify-content: space-between;
-    font-family: 'CeraPro';
-    user-select: none;
-    padding: 1rem 3rem;
+  display: flex;
+  width: 100%;
+  background-color: rgb(var(--nhl_stenden_corp_blue));
+  justify-content: space-between;
+  align-items: center;
+  font-family: "CeraPro";
+  user-select: none;
+  padding: 1rem 3rem;
 }
 
-.lang-toggle {
-    align-self: flex-start;
-    color: white;
-    font-size: 1rem;
-    background-color: rgb(var(--nhl_stenden_corp_blue));
-    border: 0.2vh solid rgb(194, 192, 192);
-    border-radius: 1rem;
-    padding: 0.4rem 0.8rem;
+
+.nav-right {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-left: auto;
 }
+
+
+.lang-toggle {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  color: white;
+  font-size: 1rem;
+  background-color: rgb(var(--nhl_stenden_corp_blue));
+  border: 0.2vh solid rgb(194, 192, 192);
+  border-radius: 1rem;
+  padding: 0.4rem 0.8rem;
+  cursor: pointer;
+}
+
+.lang-toggle img {
+  width: 1.2rem;
+  height: 1.2rem;
+  display: block;
+}
+
+
 
 .logo img {
     height: 8vh;
@@ -100,11 +122,12 @@ nav {
         display: none;
     }
 
-    .nav-links {
-        display: flex;
-        gap: 2rem;
-        align-items: flex-end;
-    }
+   .nav-links {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+
     
     .nav-link {
         color: white;
