Added translation for Footer

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -16,6 +16,14 @@ footer {
     margin-left: 5%;
 }
 
+.footerElement a {
+    color: white;
+    text-decoration: underline;
+}
+
+.footerElement a:hover {
+    color: lightgray;
+}
 
 @media screen and (max-width: 600px) {
 
