--- a/src/pages/canteen/canteen.css
+++ b/src/pages/canteen/canteen.css
@@ -1,3 +1,113 @@
+/* PHONE */
+@media screen and (max-width: 600px) {
+    .pixelsCombination {
+        height: 5rem;
+    }
+
+    .canteen-header > h1 {
+        font-size: 2rem;
+        margin-block: auto;
+        margin-inline: 2rem;
+    }
+
+    .canteen-content > h2 {
+        margin-block: 2rem;
+        margin-inline: 2rem;
+        font-size: 1rem;
+    }
+
+    .canteen-content > .imagePlaceholder {
+        width: 75%;
+        margin-top: 2rem;
+    }
+
+    .canteen-content > h3 {
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+        margin-inline: 2rem;
+        font-size: 0.8rem;
+    }
+
+    .canteen-content > p {
+        margin-inline: 2rem;
+        margin-block: 1rem;
+        font-size: 1rem;
+    }
+
+}
+
+/* TABLET */
+@media screen and (min-width: 600px) and (max-width : 990px) {
+    .pixelsCombination {
+        height: 10rem;
+    }
+
+    .canteen-header > h1 {
+        font-size: 2.5rem;
+        margin-block: auto;
+        margin-inline: 3rem;
+    }
+
+    .canteen-content > h2 {
+        margin-block: 4rem;
+        margin-inline: 3rem;
+        font-size: 1.5rem;
+    }
+
+    .canteen-content > .imagePlaceholder {
+        width: 75%;
+        margin-top: 4rem;
+    }
+
+    .canteen-content > h3 {
+        margin-top: 5rem;
+        margin-bottom: 1rem;
+        margin-inline: 3rem;
+    }
+
+    .canteen-content > p {
+        margin-inline: 3rem;
+        margin-block: 1rem;
+        font-size: 1.3rem;
+    }
+}
+
+/* PC */
+@media screen and (min-width: 990px) {
+    .pixelsCombination {
+        height: 19rem;
+    }
+
+    .canteen-header > h1 {
+        font-size: 3rem;
+        margin-block: auto;
+        margin-inline: 5rem;
+    }
+
+    .canteen-content > h2 {
+        margin-block: 4rem;
+        margin-inline: 5rem;
+        font-size: 2rem;
+    }
+
+    .canteen-content > .imagePlaceholder {
+        width: 75%;
+        margin-top: 4rem;
+    }
+
+    .canteen-content > h3 {
+        margin-top: 5rem;
+        margin-bottom: 1rem;
+        margin-inline: 5rem;
+    }
+
+    .canteen-content > p {
+        margin-inline: 5rem;
+        margin-block: 1rem;
+        font-size: 1.3rem;
+    }
+}
+
 .canteen-container {
     padding: 0rem;
 }
@@ -9,20 +119,6 @@
     padding: 0;
 }
 
-.pixelsCombination {
-    width: 25%;
-}
-
-.canteen-header > h1 {
-    font-size: 3rem;
-    margin-block: auto;
-    margin-inline: 3rem;
-}
-
-.techAndDesign {
-    width: 30%;
-}
-
 .canteen-main-content {
     display: flex;
     flex-direction: column;
@@ -31,19 +127,7 @@
 }
 
 .canteen-main-content > h2 {
-    margin-right: 51rem;
-    margin-block: 4rem;
     color: rgb(var(--nhl_stenden_corp_cyan));
-}
-
-.canteen-main-content > h3 {
-    margin-right: 62rem;
-    margin-top: 5rem;
-}
-
-.canteen-main-content > p {
-    margin-inline: 3.2rem;
-    margin-block: 1rem;
 }
 
 .buttonToNextPage {
