--- a/src/pages/studentInfo/studentinfo.css
+++ b/src/pages/studentInfo/studentinfo.css
@@ -1,3 +1,102 @@
+/* PHONE */
+@media screen and (max-width: 600px) {
+    .pixelsCombination {
+        height: 5rem;
+    }
+
+    .studentInfo-header > h1 {
+        font-size: 2rem;
+        margin-block: auto;
+        margin-inline: 2rem;
+    }
+
+    .studentInfo-main-content > h2 {
+        margin-block: 2rem;
+        margin-inline: 2rem;
+        font-size: 1rem;
+    }
+
+    .studentInfo-main-content > h3 {
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+        margin-inline: 2rem;
+        font-size: 0.8rem;
+    }
+
+    .studentInfo-main-content > .imagePlaceholder {
+        width: 75%;
+        margin-top: 2rem;
+    }
+
+    .studentInfo-main-content > p {
+        margin-inline: 2rem;
+        margin-block: 1rem;
+        font-size: 1rem;
+    }
+
+}
+
+/* TABLET */
+@media screen and (min-width: 600px) and (max-width : 990px) {
+    .pixelsCombination {
+        height: 10rem;
+    }
+
+    .studentInfo-main-header > h1 {
+        font-size: 2.5rem;
+        margin-block: auto;
+        margin-inline: 3rem;
+    }
+
+    .studentInfo-main-content > h2 {
+        margin-block: 4rem;
+        margin-inline: 3rem;
+        font-size: 1.5rem;
+    }
+
+    .studentInfo-main-content > .imagePlaceholder {
+        width: 75%;
+        margin-top: 4rem;
+    }
+
+    .studentInfo-main-content > p {
+        margin-inline: 3rem;
+        margin-block: 1rem;
+        font-size: 1.3rem;
+    }
+}
+
+/* PC */
+@media screen and (min-width: 990px) {
+    .pixelsCombination {
+        height: 19rem;
+    }
+
+    .studentInfo-main-header > h1 {
+        font-size: 3rem;
+        margin-block: auto;
+        margin-inline: 5rem;
+    }
+
+    .studentInfo-main-content > h2 {
+        margin-block: 4rem;
+        margin-inline: 5rem;
+        font-size: 2rem;
+    }
+
+    .studentInfo-main-content > .imagePlaceholder {
+        width: 75%;
+        margin-top: 4rem;
+    }
+
+    .studentInfo-main-content > p {
+        margin-inline: 5rem;
+        margin-block: 1rem;
+        font-size: 1.3rem;
+    }
+}
+
+
 .studentInfo-container {
     padding: 0rem;
 }
@@ -9,20 +108,6 @@
     padding: 0;
 }
 
-.pixelsCombination {
-    width: 25%;
-}
-
-.studentInfo-header > h1 {
-    font-size: 3rem;
-    margin-block: auto;
-    margin-inline: 3rem;
-}
-
-.techAndDesign {
-    width: 30%;
-}
-
 .studentInfo-main-content {
     display: flex;
     flex-direction: column;
@@ -31,19 +116,9 @@
 }
 
 .studentInfo-main-content > h2 {
-    margin-right: 51rem;
-    margin-block: 4rem;
+    /*margin-right: 51rem;
+    margin-block: 4rem;*/
     color: rgb(var(--nhl_stenden_corp_cyan));
-}
-
-.studentInfo-main-content > h3 {
-    margin-right: 65rem;
-    margin-top: 5rem;
-}
-
-.studentInfo-main-content > p {
-    margin-right: 2rem;
-    margin-block: 1rem;
 }
 
 .buttonToNextPage {
