Fixed carousel card text rendering

--- a/src/components/carouselcard/carouselcard.css
+++ b/src/components/carouselcard/carouselcard.css
@@ -16,9 +16,11 @@
   font-size: 1.6rem;
   font-weight: bold;
   margin-bottom: 1rem;
+  color: white
 }
 
 .carousel-card-description {
   font-size: 1.2rem;
   line-height: 1.5rem;
+  color: white;
 }
