Centered picture in study landscape IT

--- a/src/pages/studylandscapeit/studylandscapeit.css
+++ b/src/pages/studylandscapeit/studylandscapeit.css
@@ -148,3 +148,8 @@
     color: rgb(var(--nhl_stenden_corp_blue));
     cursor: pointer;
 }
+
+.studylandcape-main-content-it > div {
+    margin: 0 auto;
+    width: fit-content;
+}
