--- a/src/pages/parking/parking.css
+++ b/src/pages/parking/parking.css
@@ -158,3 +158,8 @@
     color: rgb(var(--nhl_stenden_corp_blue));
     cursor: pointer;
 }
+
+.parking-content > div {
+    margin: 0 auto;
+    width: fit-content;
+}
