--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,14 +9,12 @@ nav {
   padding: 1rem 3rem;
 }
 
-
 .nav-right {
   display: flex;
   align-items: center;
   gap: 2rem;
   margin-left: auto;
 }
-
 
 .lang-toggle {
   display: inline-flex;
@@ -26,10 +24,11 @@ nav {
   color: white;
   font-size: 1rem;
   background-color: rgb(var(--nhl_stenden_corp_blue));
-  border: 0.2vh solid rgb(194, 192, 192);
+  border: 0.25vh solid white;
   border-radius: 1rem;
   padding: 0.4rem 0.8rem;
   cursor: pointer;
+  margin-top: 0.4rem;
 }
 
 .lang-toggle img {
@@ -37,8 +36,6 @@ nav {
   height: 1.2rem;
   display: block;
 }
-
-
 
 .logo img {
     height: 8vh;
@@ -88,6 +85,8 @@ nav {
 
     .burger-btn {
         margin-top: 0.8rem;
+        margin-right: -2rem;
+        margin-left: 1rem;
     }
 
     .nav-links {
@@ -95,7 +94,7 @@ nav {
     }
 
     .logo img {
-        height: 5rem;
+        height: 3rem;
     }
 }
 
@@ -104,6 +103,7 @@ nav {
 
     .burger-btn {
         margin-top: 0.8rem;
+        margin-left: 1rem;
     }
 
     .nav-links {
@@ -123,11 +123,10 @@ nav {
     }
 
    .nav-links {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-}
-
+        display: flex;
+        gap: 0.5rem;
+        align-items: center;
+    }
     
     .nav-link {
         color: white;
