--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -44,7 +44,7 @@ nav {
 .menu {
     background-color: white;
     position: fixed;
-    top: 7rem;
+    top: 6rem;
     left: 0; 
     width: 100%;
     height: 100%;
@@ -94,7 +94,8 @@ nav {
     }
 
     .logo img {
-        height: 3rem;
+        height: 3.5rem;
+        margin-left: -3.5em;
     }
 }
 
