--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -59,6 +59,9 @@ img {
 }
 
 .description-for-combination-home-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     grid-column: 2 / 3;
 }
 
@@ -124,12 +127,13 @@ img {
 
     .explanation-to-button {
         font-size: 1rem;
+        margin-bottom: 2rem;
     }
 
    .description-for-combination-home-page {
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: center;
     }
 
     .description-for-combination-home-page > h2 {
@@ -140,6 +144,7 @@ img {
 
     img {
         height: 100%;
+        width: 10rem;
     }
 
     .combination-for-home-page p {  
@@ -152,8 +157,9 @@ img {
     }
 
     .info {
-        margin-top: 0.5rem;
-        margin-bottom: 5rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        font-size: 1.1rem;
     }
 
     .play-arrow {
@@ -164,10 +170,6 @@ img {
 
     .button-pulse:hover .play-arrow {
         fill: white; 
-    }
-
-    .pixels-home-page {
-        width: 20rem;
     }
     
     .combination-for-home-page {
@@ -254,8 +256,9 @@ img {
     }
 
     .info {
-        margin-top: 0.5rem;
-        margin-bottom: 5rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        font-size: 1.4rem;
     }
 
     .play-arrow {
@@ -323,7 +326,7 @@ img {
 
     .description-for-combination-home-page > h2 {
         text-align: left;
-        margin-top: 5rem;
+        /* margin-top: 6rem; */
     }
 
     .combination-for-home-page > p {  
@@ -335,8 +338,10 @@ img {
     }
 
     .info {
-        margin-top: 0.5rem;
+        margin-top: 2rem;
         margin-bottom: 5rem;
+        font-size: 1.2rem;
+        text-align: center;
     }
 
     .play-arrow {
