--- a/src/pages/canteen/canteen.css
+++ b/src/pages/canteen/canteen.css
@@ -17,8 +17,8 @@
     }
 
     .canteen-content > .imagePlaceholder {
-        width: 75%;
-        margin-top: 2rem;
+        margin-left: 35%;
+        justify-content: center;
     }
 
     .canteen-content > h3 {
@@ -55,8 +55,8 @@
     }
 
     .canteen-content > .imagePlaceholder {
-        width: 75%;
-        margin-top: 4rem;
+        margin-left: 35%;
+        justify-content: center;
     }
 
     .canteen-content > h3 {
@@ -91,8 +91,8 @@
     }
 
     .canteen-content > .imagePlaceholder {
-        width: 75%;
-        margin-top: 4rem;
+        margin-left: 35%;
+        justify-content: center;
     }
 
     .canteen-content > h3 {
