--- a/src/pages/kennispoort/kennispoort.css
+++ b/src/pages/kennispoort/kennispoort.css
@@ -176,3 +176,8 @@
     color: rgb(var(--nhl_stenden_corp_blue));
     cursor: pointer;
 }
+
+.kennispoort-main-content > div {
+    margin: 0 auto;
+    width: fit-content;
+}
