--- a/src/pages/equipment/equipment.css
+++ b/src/pages/equipment/equipment.css
@@ -46,8 +46,14 @@
     margin-block: 1rem;
 }
 
-.equipment-main-content > ol {
-    width: 50%;
+.equipment-description {
+    margin-right: 24.4rem;
+    margin-block: 0.5rem;
+}
+
+.equipment-details {
+    margin-left: 2.8rem;
+    margin-block: 1rem;
 }
 
 @media screen and (max-width: 768px) {
